fixed spacing css for long posts

--- a/frontend/src/routes/Post.css
+++ b/frontend/src/routes/Post.css
@@ -66,7 +66,7 @@
     display: block;
     text-align: left;
     background-color: #5FAA4B;
-    line-height: 0.5;
+    line-height: 1;
     border-style: hidden;
 }
 
