--- a/frontend/src/routes/Timeline.css
+++ b/frontend/src/routes/Timeline.css
@@ -146,7 +146,7 @@
     width: 100%;
     text-align: left;
     background-color: #5FAA4B;
-    line-height: 0.5;
+    line-height: 1;
     border-style: hidden;
 }
 
